--- a/webapp/nested/webapp.json
+++ b/webapp/nested/webapp.json
@@ -101,7 +101,7 @@
                 },
                 {
                     "apiVersion": "2018-11-01",
-                    "type": "networkconfig",
+                    "type": "networkConfig",
                     "name": "virtualNetwork",
                     "location": "[resourceGroup().location]",
                     "dependsOn": [
